[tool.poetry]
name = "tgbot"
version = "0.1.0"
description = ""
authors = ["Vadim Akhmetov <golden312va@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bson = "^0.5.10"
pymongo = "^4.10.1"
python-dotenv = "^1.0.1"
python-telegram-bot = {extras = ["job-queue"], version = "^21.7"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
